set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${MUJOCO_SAI_CONTROL_BINARY_DIR}/robot_control)
add_executable(robot_control controller.cpp)
target_link_libraries(robot_control ${MUJOCO_SAI_COMMON_LIBRARIES})
add_executable(mft_control mft_controller.cpp)
target_link_libraries(mft_control ${MUJOCO_SAI_COMMON_LIBRARIES})
add_executable(simviz simviz.cpp)
target_link_libraries(simviz ${MUJOCO_SAI_COMMON_LIBRARIES})
add_executable(calibration force_sensor_calibration.cpp)
target_link_libraries(calibration ${MUJOCO_SAI_COMMON_LIBRARIES})